--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -16,6 +17,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "18.0.28",
     "@types/testing-library__jest-dom": "5.14.5",
     "jest": "29.4.3",
