--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lodash.debounce": "^4.0.8",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.16.5",
@@ -20,9 +21,12 @@
     "@types/lodash.debounce": "^4.0.7",
     "@types/react": "18.0.28",
     "@types/testing-library__jest-dom": "5.14.5",
+    "autoprefixer": "^10.4.13",
     "jest": "29.4.3",
     "jest-environment-jsdom": "29.4.3",
     "jest-fetch-mock": "^3.0.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   }
 }
